# distsys

rs-dfs/: Cargo.toml  HDFS Architecture From Apache Hadoop Manual.md  build.rs  makefile
rs-dfs/.tempit/: COMMIT_EDITMSG  index
rs-dfs/.tempit/logs/refs/heads/: master
rs-dfs/.tempit/refs/heads/: master
rs-dfs/proto/: datanode.proto  namenode.proto
rs-dfs/src/: ansi.rs  lib.rs  main.rs
rs-dfs/src/prj/client/: main.rs
rs-dfs/src/prj/datanode/: dnlib.rs  main.rs
rs-dfs/src/prj/namenode/: main.rs  nnlib.rs
rs-dfs/tests/: datanode_tests.rs  namenode_tests.rs
