[package]
name = "rs-dfs"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
crossterm = "0.28.1"
futures = "0.3.30"
prost = "0.13.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
termion = "4.0.2"
tokio = {version = "1.40.0", features = ["full"]}
tonic = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
