[package]
name = "rs-dfs"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
crossterm = "0.28.1"
futures = "0.3.30"
prost = "0.13.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
termion = "4.0.2"
tokio = {version = "1.40.0", features = ["full"]}
tonic = "0.12.2"
uuid = {version = "1.10.0", features = ["v4"]}

[build-dependencies]
tonic-build = "0.12.2"

[[bin]]
name = "namenode"
path = "src/prj/namenode/main.rs"

[[bin]]
name = "datanode"
path = "src/prj/datanode/main.rs"

[[bin]]
name = "client"
path = "src/prj/client/main.rs"
